crates/toml/tests/snapshots/invalid/control/comment-us.stderr
TOML parse error at line 1, column 27
  |
1 | comment-us   = "ctrl-_" # 
  |                           ^
invalid comment character, expected printable characters
